:bug: Header spacing fixed

--- a/css/about.css
+++ b/css/about.css
@@ -96,7 +96,7 @@ button {
 }
 
 .header-container a {
-    padding: 30px;
+    padding: 38px;
     color: grey;
     text-decoration: none;
     font-family: 'Roboto';
